--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -108,3 +108,11 @@ api:
 
 notFound:
     title: "404 - Page not found"
+
+links:
+    errors:
+        enterValidUrl: "Please enter a valid URL"
+        linkExists: "This link has been already added"
+    existingLinks: "Existing links:"
+    addLink: "You can add new link to this repo:"
+    noLinks: "No links were added to this repo. Add the first link."
