Added polish translation, fixed typo in english one

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -29,9 +29,10 @@ footer:
         url: "http://knplabs.com/blog/symfony2bundles-becomes-knpbundle"
         label: "Why renaming Symfony2Bundles?"
     language:
-        title: "Langue"
+        title: "Language"
         en: "English"
         fr: "Français"
+        pl: "Polski"
 
 credits:
     title: "Credits"
