Added missing translations + translate then into polish and fix some wording

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -15,10 +15,24 @@ menu:
             url: "http://knplabs.com/"
 
 search:
+    list:
+        title: "Search"
+        meta:
+            title: "Search Bundles and Projects"
+            description: "Search for Open Source Bundles and Projects"
+    results:
+        title: "Search '%query%'"
+        meta:
+            title: "Search %query%"
+            description: "%count% Repositories found for %query%"
     label: "Search:"
     tooltip:
         0: "Press 's' or '/' to focus the search field ('esc' will unfocus)."
         1: "Use ↓ / j, ↑ / k and 'enter' to navigate. Use → / l, ← / h to paginate."
+    content:
+        description:
+            part1: "Please use the search input at the top right."
+            part2: "The engine will search in repository name, description and developer name."
 
 header:
     baseline: "Bundles for Symfony2"
@@ -44,6 +58,7 @@ bundles:
         description: "All Open Source Symfony 2 Bundles sorted by %sort%"
     title: "Discover %count% Symfony2 Bundles"
     sort:
+        trending: "Trending"
         best: "Best score"
         updated: "Updated recently"
         newest: "New"
@@ -70,6 +85,11 @@ bundles.list:
     by: " by "
     createdAt: "Created at "
     lastCommit: "Last commit "
+    recentCommits: "Recent commits"
+    title:
+        best: "Best score"
+        featured: "What's hot?"
+        newest: "Newest bundles"
     
 projects:
     meta:
