--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.pl.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.pl.yml
@@ -15,13 +15,27 @@ menu:
             url: "http://knplabs.com/"
 
 search:
+    list:
+        title: "Wyszukiwarka"
+        meta:
+            title: "Search Bundles and Projects"
+            description: "Search for Open Source Bundles and Projects"
+    results:
+        title: "Search '%query%'"
+        meta:
+            title: "Search %query%"
+            description: "%count% Repositories found for %query%"
     label: "Wyszukiwarka:"
     tooltip:
         0: "Naciśnij 's' lub '/' aby zaznaczyć pole wyszukiwania ('esc' odznaczy to pole)."
         1: "Użyj ↓ / j, ↑ / k oraz 'enter' do nawigacji. Użyj → / l, ← / h do stronicowania."
+    content:
+        description:
+            part1: "Please use the search input at the top right."
+            part2: "The engine will search in repository name, description and developer name."
 
 header:
-    baseline: "Paczki dla Symfony2"
+    baseline: "Paczki do Symfony2"
 
 footer:
     code: "Pokaż kod na Githubie"
@@ -29,7 +43,7 @@ footer:
         url: "http://knplabs.com/blog/symfony2bundles-becomes-knpbundle"
         label: "Dlaczego zmieniono nazwę z Symfony2Bundles?"
     language:
-        title: "Języki"
+        title: "Język"
         en: "English"
         fr: "Français"
         pl: "Polski"
@@ -41,12 +55,13 @@ credits:
 bundles:
     meta:
         title: "Odkryj %count% Paczek Symfony2"
-        description: "Wszystkie Open Sourcowe Paczki Symfony2 sortowane wg. %sort%"
-    title: "Odkryj %count% Paczek Symfony2"
+        description: "Wszystkie Open Sourcowe paczki do Symfony2 sortowane wg. %sort%"
+    title: "Odkryj %count% paczek do Symfony2"
     sort:
+        trending: "Trendy"
         best: "Najlepszy wynik"
         updated: "Ostatnio aktualizowane"
-        newest: "Nowe"
+        newest: "Najnowsze"
 
 bundles.show:
     meta:
@@ -70,6 +85,11 @@ bundles.list:
     by: " przez "
     createdAt: "Utworzone "
     lastCommit: "Ostatni commit "
+    recentCommits: "Najnowsze commity"
+    title:
+        best: "Najlepszy wynik"
+        featured: "Co nowego?"
+        newest: "Najnowsze paczki"
     
 projects:
     meta:
