Composer integration: - detect if repo provives package, and give +20 to score for that - show packagist icon with link on bundle list - show composer name with link to packagist on repo view

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -81,6 +81,7 @@ bundles.show:
         buildStatus: "Build status:"
     contributors:
         title: "Contributors"
+        composerName: "Composer name:"
     latest_commits:
         title: "Latest commits"
         by: "By"
