--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -77,6 +77,7 @@ bundles.show:
         contributors: "Nb of contributors:"
         followers: "Nb of followers:"
         buildStatus: "Build status:"
+        composerName: "Composer name:"
     latest_commits:
         title: "Latest commits"
         by: "By"
