Compute trending bundles

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -66,6 +66,7 @@ bundles:
         best: "Best score"
         updated: "Updated recently"
         newest: "New"
+        trend: "Trending"
 
 bundles.show:
     meta:
