--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.fr.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.fr.yml
@@ -66,6 +66,7 @@ bundles:
         best: "Meilleur score"
         updated: "Mis à jour récemment"
         newest: "Nouveaux"
+        trend: "Tendances"
 
 bundles.show:
     meta:
