Display score evolution on a repo's page

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -89,6 +89,8 @@ bundles.show:
         by: "by"
         and: "&"
         contributors: "contributors…"
+    chart:
+        title: "Score evolution"
 
 bundles.list:
     by: " by "
