OAuth now works as expected
When you hit a protected page, you get redirected to github for oauth
processing, then back to the page you were.

The hack is dirty, I'm at shame of comitting that to an opensource project
really, but heh, we'll have more time later to fix that "the right way".

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -96,6 +96,7 @@ bundles.show:
         title: "Registered users"
         iAmUsing: "I'm using this bundle"
         iAmNotUsing: "I'm not using this bundle anymore"
+        loginToUse: "Login to say you use this bundle"
     chart:
         title: "Score evolution"
 
