Only shows the evolution of the number of bundles

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/translations/messages.en.yml
@@ -160,13 +160,9 @@ evolution:
         title: "Symfony ecosystem evolution"
         description: "Discover the evolution of the size of the Symfony2 ecosystem"
     title: "Evolution of the Symfony ecosystem"
-    sum_score:
-        text: |
-            This shows the daily sum of the scores of all bundles.  
-            It reflects how much the Symfony community is growing − in size and in quality.
     number_score:
         text: |
-            This show the daily number of bundle.
+            This shows the evolution of the daily number of bundles.
 travis:
     buildStatus:
         passing: "Passing"
